Fix edit view and validator formly fields alignment

--- a/ESSArch_PP/frontend/static/frontend/styles/modules/reception.scss
+++ b/ESSArch_PP/frontend/static/frontend/styles/modules/reception.scss
@@ -182,6 +182,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        align-items: baseline;
         padding: 5px;
         width: 100%;
     }
@@ -231,6 +232,7 @@ input[type="checkbox"] {
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
+        align-items: flex-start;
         min-height: 70px;
         .formly-field {
             min-width: 105px;
